--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,25 @@
+@font-face {
+  font-family: 'Cera';
+  src: url('./assets/fonts/CeraPro-Medium.woff2') format('woff2'),
+      url('./assets/fonts/CeraPro-Medium.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Cera';
+  src: url('./assets/fonts/CeraPro-Bold.woff') format('woff2'),
+      url('./assets/fonts/CeraPro-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Cera',-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #212327;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
