--- a/src/App.css
+++ b/src/App.css
@@ -124,3 +124,28 @@ stroke-linecap: round;
   stroke: #70c542;
 }
 }
+
+.addPlaylistButton {
+  border-radius: 500px;
+  padding: 1rem 2rem 0.9rem;
+  text-decoration: none;
+  color: #fff;
+  background-color: #1db954;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  line-height: 1;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: .3s ease;
+  margin-top: 1rem;
+}
+.reverseFlex {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.clickable {
+  cursor: pointer;
+}
+.clickable:hover {
+  cursor: pointer;
+}
